--- a/index.html
+++ b/index.html
@@ -5,43 +5,127 @@
   <title>Resultados Negociación Locales</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
       font-family: Arial, sans-serif;
-      max-width: 600px;
-      margin: 50px auto;
+      background-color: #f7f9fb;
+      color: #333;
+      max-width: 100%;
+      margin: 0;
       padding: 20px;
     }
+    .container {
+      max-width: 600px;
+      margin: auto;
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+    header {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    header img {
+      max-width: 100px;
+      margin-bottom: 10px;
+    }
     input, button {
-      padding: 10px;
-      margin: 5px 0;
+      padding: 12px;
+      margin: 8px 0;
       width: 100%;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 1rem;
+    }
+    button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+    }
+    button:hover {
+      background-color: #0056b3;
     }
     .resultado {
-      background: #f0f0f0;
+      background: #ffffff;
       padding: 15px;
       margin-top: 20px;
       border-radius: 8px;
+      border: 1px solid #ddd;
+    }
+    .acciones {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      margin-top: 10px;
+    }
+    footer {
+      text-align: center;
+      font-size: 0.9em;
+      margin-top: 40px;
+      color: #777;
+    }
+    @media (min-width: 480px) {
+      .acciones {
+        flex-direction: row;
+      }
     }
   </style>
 </head>
 <body>
-  <h2>Consulta tu resultado de la negociación</h2>
-  <label for="rut">RUT (sin puntos, con guión):</label>
-  <input type="text" id="rut" placeholder="Ej: 12345678-9">
+  <div class="container">
+    <header>
+      <img src="logo-sindicato.jpg" alt="Logo Sindicato">
+      <h2>Consulta tu resultado de la negociación</h2>
+    </header>
 
-  <label for="codigo">Código de seguridad (4 dígitos):</label>
-  <input type="number" id="codigo" placeholder="Ej: 1234">
+    <label for="rut">RUT (sin puntos, con guión):</label>
+    <input type="text" id="rut" placeholder="Ej: 12345678-9">
 
-  <button onclick="buscarTrabajador()">Consultar</button>
+    <label for="codigo">Código de seguridad (4 dígitos):</label>
+    <input type="number" id="codigo" placeholder="Ej: 1234">
 
-  <div id="resultado" class="resultado" style="display:none;"></div>
+    <button id="btnConsultar">Consultar</button>
+    <button id="btnLimpiar">Limpiar</button>
+
+    <div id="resultado" class="resultado" style="display:none;"></div>
+    <div class="acciones" id="acciones" style="display:none;">
+      <button id="btnImprimir">Imprimir</button>
+      <button id="btnCompartir">Compartir</button>
+    </div>
+
+    <footer>
+      Sindicato Log&iacute;stica Nacional Santa Isabel &mdash; Todos los derechos reservados
+    </footer>
+  </div>
 
   <script>
-    let trabajadores = [];
+    const trabajadores = [];
 
     fetch('trabajadores_locales_completo_con_texto.json')
       .then(res => res.json())
-      .then(data => trabajadores = data);
+      .then(data => trabajadores.push(...data))
+      .catch(error => {
+        console.error("Error al cargar el archivo JSON:", error);
+        alert("Hubo un problema al cargar los datos. Intenta nuevamente más tarde.");
+      });
+
+    function generarHTMLResultado(res) {
+      return `
+        <strong>${res.nombre}</strong><br>
+        Jornada: ${res.jornada} horas<br>
+        Antigüedad: ${res.antiguedad.toFixed(2)} años<br><br>
+        <strong>Nuevo Sueldo Base:</strong> $${res.sueldo_base.toLocaleString('es-CL')}<br>
+        <strong>Movilización:</strong> $${res.movilizacion.toLocaleString('es-CL')}<br>
+        <strong>Presentismo:</strong> $${res.presentismo.toLocaleString('es-CL')}<br>
+        <strong>Asignación de Caja:</strong> $${res.asig_caja.toLocaleString('es-CL')}<br>
+        <strong>Aguinaldo:</strong> ${res.aguinaldo}<br>
+        <strong>Vacaciones Verano:</strong> $${res.vacaciones_verano.toLocaleString('es-CL')}<br>
+        <strong>Vacaciones Invierno:</strong> $${res.vacaciones_invierno.toLocaleString('es-CL')}<br>
+      `;
+    }
 
     function buscarTrabajador() {
       const rut = document.getElementById('rut').value.trim();
@@ -49,26 +133,36 @@
       const res = trabajadores.find(t => t.rut === rut && t.codigo === codigo);
 
       const resultadoDiv = document.getElementById('resultado');
+      const accionesDiv = document.getElementById('acciones');
 
       if (res) {
         resultadoDiv.style.display = 'block';
-        resultadoDiv.innerHTML = `
-          <strong>${res.nombre}</strong><br>
-          Jornada: ${res.jornada} horas<br>
-          Antigüedad: ${res.antiguedad.toFixed(2)} años<br><br>
-          <strong>Nuevo Sueldo Base:</strong> $${res.sueldo_base.toLocaleString('es-CL')}<br>
-          <strong>Movilización:</strong> $${res.movilizacion.toLocaleString('es-CL')}<br>
-          <strong>Presentismo:</strong> $${res.presentismo.toLocaleString('es-CL')}<br>
-          <strong>Asignación de Caja:</strong> $${res.asig_caja.toLocaleString('es-CL')}<br>
-          <strong>Aguinaldo:</strong> ${res.aguinaldo}<br>
-          <strong>Vacaciones Verano:</strong> $${res.vacaciones_verano.toLocaleString('es-CL')}<br>
-          <strong>Vacaciones Invierno:</strong> $${res.vacaciones_invierno.toLocaleString('es-CL')}<br>
-        `;
+        accionesDiv.style.display = 'flex';
+        resultadoDiv.innerHTML = generarHTMLResultado(res);
       } else {
         resultadoDiv.style.display = 'block';
+        accionesDiv.style.display = 'none';
         resultadoDiv.innerHTML = '<span style="color:red">Datos no encontrados. Verifica tu RUT y código.</span>';
       }
     }
+
+    function limpiarFormulario() {
+      document.getElementById('rut').value = '';
+      document.getElementById('codigo').value = '';
+      document.getElementById('resultado').style.display = 'none';
+      document.getElementById('acciones').style.display = 'none';
+    }
+
+    function compartirResultado() {
+      const url = window.location.href;
+      navigator.clipboard.writeText(url);
+      alert("Enlace copiado al portapapeles para compartir");
+    }
+
+    document.getElementById('btnConsultar').addEventListener('click', buscarTrabajador);
+    document.getElementById('btnLimpiar').addEventListener('click', limpiarFormulario);
+    document.getElementById('btnImprimir').addEventListener('click', () => window.print());
+    document.getElementById('btnCompartir').addEventListener('click', compartirResultado);
   </script>
 </body>
 </html>
